# Food_Vault

./: .gitignore  README.md  server.ps1  server_launcher.ps1
backend/: main.py  pyproject.toml  start.ps1
backend/app/: __init__.py  main.py
backend/app/database/: __init__.py  auth.py  bookmarks.py  initDB.py  recipe.py  stats.py
backend/app/models/: bookmark.py  recipe.py  user.py
backend/app/routes/: __init__.py  bookmark.py  health_check.py  image_upload.py  recipe.py  stats.py  user.py
backend/app/schemas/: __init__.py  bookmark.py  recipe.py  user.py  utlis.py
backend/app/utils/: __init__.py  jsonhandler.py  jwt.py  security.py
backend/data/: foodvault.sqlite  recipesData.json  user.sqlite
frontend/: index.html  package.json  pnpm-lock.yaml  recipes.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EmailOTPInput.tsx  HeroComponent.tsx  ImageUploader.tsx  NavBar.tsx  NewRecipeForm.tsx  RecipeCard.tsx  RecipeDetails.tsx  RecipeGrid.tsx  UserMenu.tsx
frontend/src/components/Dashboard/: Bookmarked.tsx  DashboardHeader.tsx  (+2 more)
frontend/src/constant/: TagColors.ts  Tags_Info.ts
frontend/src/context/: BookmarkContext.tsx  RecipeDataContext.tsx  UserDataContext.tsx
frontend/src/debug/: safelist-gen.ts
frontend/src/hooks/: useBookmarks.tsx  useRecipes.tsx  useStats.tsx
frontend/src/lib/: recipeData.ts
frontend/src/pages/: Bookmarks.tsx  Dashboard.tsx  Home.tsx  UserRecipes.tsx
frontend/src/types/: recipeCardDataType.ts  recipeType.ts  statsType.ts  usersType.ts
frontend/src/utils/: format.ts  generateTagColor.ts
(+13 files in other folders)
